// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v1 fixDuplicates next.js.lock 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


\\"@scope/lib@>=1.0.0\\", \\"@scope/lib@>=2.0.0\\":
  version \\"4.17.15\\"
  resolved \\"https://example.net/@scope/lib@^4.7.15\\"

library@>=1.0.0, library@>=1.1.0:
  version \\"3.0.0\\"
  resolved \\"https://example.net/library@^3.0.0\\"

library@^2.0.0:
  version \\"2.1.0\\"
  resolved \\"https://example.net/library@^2.1.0\\"

lodash@>=1.0.0, lodash@>=2.0.0:
  version \\"4.17.15\\"
  resolved \\"https://registry.yarnpkg.com/lodash/-/lodash-4.17.15.tgz#b447f6670a0455bbfeedd11392eff330ea097548\\"
"
`;

exports[`v1 fixDuplicates yarn.lock 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


\\"@scope/lib@>=1.0.0\\", \\"@scope/lib@>=2.0.0\\":
  version \\"4.17.15\\"
  resolved \\"https://example.net/@scope/lib@^4.7.15\\"

library@>=1.0.0, library@>=1.1.0:
  version \\"3.0.0\\"
  resolved \\"https://example.net/library@^3.0.0\\"

library@^2.0.0:
  version \\"2.1.0\\"
  resolved \\"https://example.net/library@^2.1.0\\"

lodash@>=1.0.0, lodash@>=2.0.0:
  version \\"4.17.15\\"
  resolved \\"https://registry.yarnpkg.com/lodash/-/lodash-4.17.15.tgz#b447f6670a0455bbfeedd11392eff330ea097548\\"
"
`;

exports[`v1 listDuplicates next.js.lock 1`] = `
Array [
  "Package \\"@scope/lib\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;

exports[`v1 listDuplicates yarn.lock 1`] = `
Array [
  "Package \\"@scope/lib\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;

exports[`v2 fixDuplicates 456.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4

\\"@bluelovers/tsconfig@npm:^1.0.19, @bluelovers/tsconfig@npm:^1.0.20\\":
  version: 1.0.20
  resolution: \\"@bluelovers/tsconfig@npm:1.0.20\\"
  checksum: 87f0e7bcb70ce2553364de1fe91fcf858e15588d33e947aa380903c0b185ca70fec44b7a4a8e9a81c152a2a7e1fec467c82cb7ea42682c6da3ffd4f9107f1f66
  languageName: node
  linkType: hard

\\"@types/color-name@npm:^1.1.1\\":
  version: 1.1.1
  resolution: \\"@types/color-name@npm:1.1.1\\"
  checksum: da161751cf550d06d01c7969b9b332fc83727d18410ad7d01c86899b14845dd2f180789f79701fa9826f193aa72ec0f25c6a21ffc81059d57b9c186ff319242d
  languageName: node
  linkType: hard

\\"@types/node@npm:*\\":
  version: 14.0.27
  resolution: \\"@types/node@npm:14.0.27\\"
  checksum: c773c8d221f01811faf75bff1e94f495cac152e5e58b481ed1c9a86629c5e530bed18e35312d1433bcfb1e8fbc26c60144da36227346fd52f48b55ce58ec549a
  languageName: node
  linkType: hard

\\"ansi-colors@npm:^3.0.0\\":
  version: 3.2.4
  resolution: \\"ansi-colors@npm:3.2.4\\"
  checksum: feca4ed0d76c03b50be8f2dba9f95925292716b23cce38df583794f9de455ff006f844075a55f2c8174d1902a15a9f99c18b59e89345fa573bfab7a8e84b52bf
  languageName: node
  linkType: hard

\\"ansi-regex@npm:^2.0.0\\":
  version: 2.1.1
  resolution: \\"ansi-regex@npm:2.1.1\\"
  checksum: 166a4be3a94bbab82de8cc32f3833f14b3648e3274c081a1ba76ed4e6c9d9a7453ae93867518625c8a23dbb585a4a9ef424be122bb1300fc152e8e26027f0740
  languageName: node
  linkType: hard

\\"ansi-regex@npm:^3.0.0\\":
  version: 3.0.0
  resolution: \\"ansi-regex@npm:3.0.0\\"
  checksum: 8bb91d5a72509b4930774afcbb086c6dda4c31c5557a89ff6b29dddb7830204b7835e7e035970652a2e7b8ace0f06001890a1d826b330c731715387db959004e
  languageName: node
  linkType: hard

\\"ansi-styles@npm:^4.1.0\\":
  version: 4.2.1
  resolution: \\"ansi-styles@npm:4.2.1\\"
  dependencies:
    \\"@types/color-name\\": ^1.1.1
    color-convert: ^2.0.1
  checksum: a5dc6539f0428013cc3873deed8f32cf1f3dda7db48364d52796b5ed8aa9f6754042c711f9c7029b9104c172949d208efc54141f5b29118638cdadf13f7b0122
  languageName: node
  linkType: hard

\\"camelcase@npm:^5.0.0\\":
  version: 5.3.1
  resolution: \\"camelcase@npm:5.3.1\\"
  checksum: 58f271afe62d5396a5a2d28cbbeb3520732763d3c005e295225d48a58408d44575bf92475cd828f597790725f1be43aa08e623b65bdffb5619f16fb402773bb6
  languageName: node
  linkType: hard

\\"chalk@npm:^4.1.0\\":
  version: 4.1.0
  resolution: \\"chalk@npm:4.1.0\\"
  dependencies:
    ansi-styles: ^4.1.0
    supports-color: ^7.1.0
  checksum: 7dfc319b2f4d8dcf814185f19f169f8c73d1d413a6e1e4d75e85f7fa25728e9849b1d0d3fe48e886440dadcc0bd9065c5a765d98e080b4f92af9b30c8fdc7dcb
  languageName: node
  linkType: hard

\\"cliui@npm:^4.0.0\\":
  version: 4.1.0
  resolution: \\"cliui@npm:4.1.0\\"
  dependencies:
    string-width: ^2.1.1
    strip-ansi: ^4.0.0
    wrap-ansi: ^2.0.0
  checksum: 471f87cab599c6717baa8749a33804f84c219d1cab9cf8a105f8b7922e5bee07b2335a09a8973a54b959df060a38f9c7134a302ff4c70c8b2285090d7fb8b1de
  languageName: node
  linkType: hard

\\"code-point-at@npm:^1.0.0\\":
  version: 1.1.0
  resolution: \\"code-point-at@npm:1.1.0\\"
  checksum: c0a50074d39d0051356938df5ffd5e2c1cb3e054fc883bfbec32e48a6ee6630db0aa8cc1cc86482b255abefa38140ae72542dd8fa6af8d946a618a17c0e00f55
  languageName: node
  linkType: hard

\\"color-convert@npm:^2.0.1\\":
  version: 2.0.1
  resolution: \\"color-convert@npm:2.0.1\\"
  dependencies:
    color-name: ~1.1.4
  checksum: bc4adfdbb1e3a3353aa56adbe1e0f50085a63c0296b31c30bc4500daf49f9fe21248d6078e2236832840e0dea8c7ce2c0d6e783e04bc0c31fc9d230f166891b6
  languageName: node
  linkType: hard

\\"color-name@npm:~1.1.4\\":
  version: 1.1.4
  resolution: \\"color-name@npm:1.1.4\\"
  checksum: 43b24807a5b89efc7ac953fbac98a18e79b09b0bd610f45525eb79ca33e1c6230497027a30dc437448b9c719989fc0c328f75b8b61e2345700e99d1e643a6633
  languageName: node
  linkType: hard

\\"cross-spawn@npm:^6.0.0\\":
  version: 6.0.5
  resolution: \\"cross-spawn@npm:6.0.5\\"
  dependencies:
    nice-try: ^1.0.4
    path-key: ^2.0.1
    semver: ^5.5.0
    shebang-command: ^1.2.0
    which: ^1.2.9
  checksum: 5103fd3ec3c3d914d78190d1b7021bcca3f66d1c35008f67a696884a7d8c74a415158110436610abaae044d7351ecf8d71bb66872e88bbd80525b013b5b44256
  languageName: node
  linkType: hard

\\"decamelize@npm:^1.2.0\\":
  version: 1.2.0
  resolution: \\"decamelize@npm:1.2.0\\"
  checksum: b4f9874e4777db39289cfe0d34d079df9531b10b50290ec8443e342faa840abbd1e7003ea0d735e03ea143d0bb34151afcb3711e7bc02fdcf19fe002683699ba
  languageName: node
  linkType: hard

\\"end-of-stream@npm:^1.1.0\\":
  version: 1.4.4
  resolution: \\"end-of-stream@npm:1.4.4\\"
  dependencies:
    once: ^1.4.0
  checksum: a25dcd0d559363e7c63cce300e4224473fc5f8bf8d363c0b81c6b61b4773358463bac99dfd0b7146e79ebce591cd92fd608720325436cd3b6b31eacc9e9e859b
  languageName: node
  linkType: hard

\\"execa@npm:^1.0.0\\":
  version: 1.0.0
  resolution: \\"execa@npm:1.0.0\\"
  dependencies:
    cross-spawn: ^6.0.0
    get-stream: ^4.0.0
    is-stream: ^1.1.0
    npm-run-path: ^2.0.0
    p-finally: ^1.0.0
    signal-exit: ^3.0.0
    strip-eof: ^1.0.0
  checksum: 4c8005b1192433dd9cb42c0b2e3d616d8f5def85f38906bb644b8468c44824b5f2f8b265661e2f6ed7ba87cb7ae2e6aa66a96ae5093d8feca99fa51ac30b3783
  languageName: node
  linkType: hard

\\"find-up@npm:^3.0.0\\":
  version: 3.0.0
  resolution: \\"find-up@npm:3.0.0\\"
  dependencies:
    locate-path: ^3.0.0
  checksum: a58b85fac6dd65a13f873a2313d955b8d520396122a8b0bc4a5010eb5d6f71036222169b9fa9914d2a62360f6b9943c5c6e0dbf1139d8130230b33785e7b86c2
  languageName: node
  linkType: hard

\\"fmake@npm:^0.1.3\\":
  version: 0.1.3
  resolution: \\"fmake@npm:0.1.3\\"
  dependencies:
    ansi-colors: ^3.0.0
    yargs: ^12.0.0
  checksum: 324640a49969f1a92183948e7f6470006bbad856e02c3875f4f653c997da45d510f97e0b6f5abacf9e2ab39efff38b9a0d37010862a4d1537fe86550507f9d65
  languageName: node
  linkType: hard

\\"get-caller-file@npm:^1.0.1\\":
  version: 1.0.3
  resolution: \\"get-caller-file@npm:1.0.3\\"
  checksum: 74c0e488459138914d1984643f21fc522d6b08ab33b8a49ba8eea4661d0cd1a3eda21c97e5b76f311fd64ce4b5e1f01afa09a0631cd5bbe194d2d0608103005a
  languageName: node
  linkType: hard

\\"get-stream@npm:^4.0.0\\":
  version: 4.1.0
  resolution: \\"get-stream@npm:4.1.0\\"
  dependencies:
    pump: ^3.0.0
  checksum: e3ff150d54d0e0052f7d85f9be060182cb2b3313721ca757af0f90e4399bdd80992727245b4e731bc5edbb4f67a51a3489ab7ad9ebb0b3560ce1d925985151e8
  languageName: node
  linkType: hard

\\"has-flag@npm:^4.0.0\\":
  version: 4.0.0
  resolution: \\"has-flag@npm:4.0.0\\"
  checksum: 8c9a32ef47dfc77c5caf80a0e33a2d921414006ce954047d2274a8774e07cd916f2dd546aed7d89017504cb3fe66248dabb64f9c5bd893520cdd4c81e95d1198
  languageName: node
  linkType: hard

\\"invert-kv@npm:^2.0.0\\":
  version: 2.0.0
  resolution: \\"invert-kv@npm:2.0.0\\"
  checksum: 85bd094d6d7341b4577a92c795eccb858ec0c0c32cb0cd97f208c29274d8bbb5ae13ab55679d109eb412cb0efc60e873c28962468f83dcbb1d41212f09d54eed
  languageName: node
  linkType: hard

\\"is-fullwidth-code-point@npm:^1.0.0\\":
  version: 1.0.0
  resolution: \\"is-fullwidth-code-point@npm:1.0.0\\"
  dependencies:
    number-is-nan: ^1.0.0
  checksum: 7e50f3c2e21617a7dde049a2cfecd22cd85c57f3a05a8a216785c4196926867a6dd85ff6d035cc3f1210853edd01f01a480aa4ce183d73c4cccc1b396e4fbea4
  languageName: node
  linkType: hard

\\"is-fullwidth-code-point@npm:^2.0.0\\":
  version: 2.0.0
  resolution: \\"is-fullwidth-code-point@npm:2.0.0\\"
  checksum: ab96662efbb49a1e33dd59bdf1451e913c69bf407daae26e2ad6f64458bcbb1b5d5a91b1d95c690540da00f7183e53d7a0b81b9d494073e85e7bd75410a6f358
  languageName: node
  linkType: hard

\\"is-stream@npm:^1.1.0\\":
  version: 1.1.0
  resolution: \\"is-stream@npm:1.1.0\\"
  checksum: 0c43bc68eb748e970e6df1163a52ce9ec37bfa4c0161557b4524d640ac414934c74427ae8f49c91f55c7fac807f4407a0eb5c7b24ac0b9e78f203aa706bc4cfa
  languageName: node
  linkType: hard

\\"isexe@npm:^2.0.0\\":
  version: 2.0.0
  resolution: \\"isexe@npm:2.0.0\\"
  checksum: 1f6f7ccf6206a544097e27f04018fbd4fdb45d71eadac305d4b60cc18668d35c970d3c0bfadc4b348dd603d5536496a5634dd5f64792ea5e745c62cbc0ce9730
  languageName: node
  linkType: hard

\\"lcid@npm:^2.0.0\\":
  version: 2.0.0
  resolution: \\"lcid@npm:2.0.0\\"
  dependencies:
    invert-kv: ^2.0.0
  checksum: 05873c2b217aa63da64623ad78fdc55ac88b4385fd19d573143dcb3d1b21550de79d403688dd2625f12b54a42f0487510680af0a2c49ab2963be2cd229f18d36
  languageName: node
  linkType: hard

\\"locate-path@npm:^3.0.0\\":
  version: 3.0.0
  resolution: \\"locate-path@npm:3.0.0\\"
  dependencies:
    p-locate: ^3.0.0
    path-exists: ^3.0.0
  checksum: 4f89906f2841b7a2f49842958ac794bb928623dadd07fb857ad63f55afc0133aed754f1d059d881265bd4ca2f6ff89ff77889c290212029f0bc5611a6f1a3dfb
  languageName: node
  linkType: hard

\\"map-age-cleaner@npm:^0.1.1\\":
  version: 0.1.3
  resolution: \\"map-age-cleaner@npm:0.1.3\\"
  dependencies:
    p-defer: ^1.0.0
  checksum: 4aea3141a92413cda3d1a26b0e5dcd4ec294caf8ff627c881bd63ff3ace858342aba68043215c8e6e8425bfa914a536e4c11c6f16489838be715514b023eebf9
  languageName: node
  linkType: hard

\\"mem@npm:^4.0.0\\":
  version: 4.3.0
  resolution: \\"mem@npm:4.3.0\\"
  dependencies:
    map-age-cleaner: ^0.1.1
    mimic-fn: ^2.0.0
    p-is-promise: ^2.0.0
  checksum: 3445f5cc1b55740b2100c9126ecab8796905e753dee5f2281c8656bd9b393fdb302362c82fbb9dba1e7ee5170185c34031524fbf7fd68692e11f47f379cafd01
  languageName: node
  linkType: hard

\\"mimic-fn@npm:^2.0.0\\":
  version: 2.1.0
  resolution: \\"mimic-fn@npm:2.1.0\\"
  checksum: ea88331af3a84feca9a6763ff09ea8504daf040e876b47311460b54576233d5dea6aa94fe7b617987709d9a40bd5cbf89281b01a346de9510dfae569e3b1cb12
  languageName: node
  linkType: hard

\\"nice-try@npm:^1.0.4\\":
  version: 1.0.5
  resolution: \\"nice-try@npm:1.0.5\\"
  checksum: 67ed974ae082d8efabbd1e4c0b052bb651efd43db7efba36ef2f32699bafae51bfd5f7bab8ae2ba528f060943e902fb42d5b9c68b8ea0e432246beac8ea2360c
  languageName: node
  linkType: hard

\\"npm-run-path@npm:^2.0.0\\":
  version: 2.0.2
  resolution: \\"npm-run-path@npm:2.0.2\\"
  dependencies:
    path-key: ^2.0.0
  checksum: 209cab1259d0380dba8065603e120b29fdf167678d86c832fde853bf89de6cf85c64bb9aa1be04ae0237dd6b1fc469632554107c1d9961ec35ce07d9c5d3b5f5
  languageName: node
  linkType: hard

\\"number-is-nan@npm:^1.0.0\\":
  version: 1.0.1
  resolution: \\"number-is-nan@npm:1.0.1\\"
  checksum: 57477f268f33135ab7765730d4411957f128765259b7281b403384d174ef45bb4d82421a74e8e233fa3913f1c0d9a8be1671f1b4d35947b6eb51e8ab7639a888
  languageName: node
  linkType: hard

\\"once@npm:^1.3.1, once@npm:^1.4.0\\":
  version: 1.4.0
  resolution: \\"once@npm:1.4.0\\"
  dependencies:
    wrappy: 1
  checksum: 47a04404e9aa3a209a7e536b199780fe75aba04df0a035b221285f2f703d0ab58286ffb402ff7cb5a3b894d0e86685eb4fc2766ce7a19555c14221437f248c03
  languageName: node
  linkType: hard

\\"os-locale@npm:^3.0.0\\":
  version: 3.1.0
  resolution: \\"os-locale@npm:3.1.0\\"
  dependencies:
    execa: ^1.0.0
    lcid: ^2.0.0
    mem: ^4.0.0
  checksum: f1c6f527865f6d5bf3687bef0fcf10828b838a64492c4706f5ba3ca2f778d7dce32f86ff856dddada6b768e76eba5c511f7e48e7102312a9e46f9b3066d377c5
  languageName: node
  linkType: hard

\\"p-defer@npm:^1.0.0\\":
  version: 1.0.0
  resolution: \\"p-defer@npm:1.0.0\\"
  checksum: 8fec4450070e394aa974769a7c62ea8d42c203d7f4a1e6c9cb0d8153439bf011cc43a5ac4a78e100a8f4e6fad2510184f47738552d6305d76ea73aaeaf63458e
  languageName: node
  linkType: hard

\\"p-finally@npm:^1.0.0\\":
  version: 1.0.0
  resolution: \\"p-finally@npm:1.0.0\\"
  checksum: fe1770b0c3a3d21013a4b1754458bfdca7c145c65adb4a8d19892c2376d2daf195c572aef07c0a7753b3c552a47d3310193462c95b5eb4ff6e0397d889078c3f
  languageName: node
  linkType: hard

\\"p-is-promise@npm:^2.0.0\\":
  version: 2.1.0
  resolution: \\"p-is-promise@npm:2.1.0\\"
  checksum: bf4e7451ca4c2bc422e5128d691be77143338441b22d2b8062354ee365ea2c9c64f173d80980c0bc965cdc93c4b4bbfff79fe6aa14cde2d6f2e75619d6088cc0
  languageName: node
  linkType: hard

\\"p-limit@npm:^2.0.0\\":
  version: 2.3.0
  resolution: \\"p-limit@npm:2.3.0\\"
  dependencies:
    p-try: ^2.0.0
  checksum: 5dc7448442d71b536654a3054c179bcbf1a0998f28df801415298751b01baa839b96921be1f7e68227130741b1ab4cf8e276a2d67fd6362df8f09429dd538e40
  languageName: node
  linkType: hard

\\"p-locate@npm:^3.0.0\\":
  version: 3.0.0
  resolution: \\"p-locate@npm:3.0.0\\"
  dependencies:
    p-limit: ^2.0.0
  checksum: 79303104cac5fad06fc1c30057e1cf14c805180cf82be6efb8b15942079bd3cddb5768ab14b1f19a13be28c1a8491f6a7cd4335f3993078dec4b6aa0888dc7a6
  languageName: node
  linkType: hard

\\"p-try@npm:^2.0.0\\":
  version: 2.2.0
  resolution: \\"p-try@npm:2.2.0\\"
  checksum: e7dceba546bcab1c72a4c1c8af45c7017e93dcafc4bdd9bd7e78d3b155a7e74cd0ec5277f2039cbc0d538050de1cfa52e8a157a3a741c0a6de870e0f5b03da33
  languageName: node
  linkType: hard

\\"path-exists@npm:^3.0.0\\":
  version: 3.0.0
  resolution: \\"path-exists@npm:3.0.0\\"
  checksum: b04837ffc484dbe6edde02ee4e00daa4dbc01eaa7da7aae23b643021072a519fa99b3acd225936934f27455abef5b139974f0813ce6b293821f79aaefa5babbb
  languageName: node
  linkType: hard

\\"path-key@npm:^2.0.0, path-key@npm:^2.0.1\\":
  version: 2.0.1
  resolution: \\"path-key@npm:2.0.1\\"
  checksum: c89ee103cdc74ba8a5772cb56e9f1346cc7eae0789c4f9cb01ba5e6d501c2642900538e444ba26284a3a52fc01b9f1d70c7270d638c3cf37c25958ebf860be4e
  languageName: node
  linkType: hard

\\"pump@npm:^3.0.0\\":
  version: 3.0.0
  resolution: \\"pump@npm:3.0.0\\"
  dependencies:
    end-of-stream: ^1.1.0
    once: ^1.3.1
  checksum: 09633ba0f0d3d09f68afa6d7ad46e05e4860ec0549d9e55a87baa28fca048c3b87d1debdf1b3fac9bbbd21cdb0c3e11c527cb63471569cf88bcc0daeb466b32e
  languageName: node
  linkType: hard

\\"require-directory@npm:^2.1.1\\":
  version: 2.1.1
  resolution: \\"require-directory@npm:2.1.1\\"
  checksum: 7af7d1bd006a28164bdc6f774be413700bdbd817c9c96857fe6018f8ae804b8faef040ca77dfba9606d08b5ef1c623516aaa677d43c754a2810a3a83deef9ee7
  languageName: node
  linkType: hard

\\"require-main-filename@npm:^1.0.1\\":
  version: 1.0.1
  resolution: \\"require-main-filename@npm:1.0.1\\"
  checksum: 1f625d9dcf0c5c94b05d0054714a9c89717a822984989d7d60c711eb6d9c3af42ccdf5e77f46a00c7afdca7d8047ebe678bb90e4e81748ea4fa4141dd01a6713
  languageName: node
  linkType: hard

\\"semver@npm:^5.5.0\\":
  version: 5.7.1
  resolution: \\"semver@npm:5.7.1\\"
  bin:
    semver: ./bin/semver
  checksum: dce4680e58a60e12fd7ec1f274635267206e466eaca54e3238f7c49baf33ba07aae8fe8f002a0cf6ec3e8c6f1ccbf158e8f59acc89c1777063e93eb239fe8b76
  languageName: node
  linkType: hard

\\"set-blocking@npm:^2.0.0\\":
  version: 2.0.0
  resolution: \\"set-blocking@npm:2.0.0\\"
  checksum: f8215d87051e3ace26fef38cefcaed923a20de15bda373ddcc6d1e8cc9f32d27aade1824847e2a4188261005f20fba05485b76f6e1b39d9d099ad1a50e677181
  languageName: node
  linkType: hard

\\"shebang-command@npm:^1.2.0\\":
  version: 1.2.0
  resolution: \\"shebang-command@npm:1.2.0\\"
  dependencies:
    shebang-regex: ^1.0.0
  checksum: 3d830f3ad0c796f671ad3a8a0ed9ac75a52b21a2f0cfc1e0675fb4d0530e332b10a3b0171f63ef6a2efa14dd7f92a3d03c49927afc9b3529830628671fade78a
  languageName: node
  linkType: hard

\\"shebang-regex@npm:^1.0.0\\":
  version: 1.0.0
  resolution: \\"shebang-regex@npm:1.0.0\\"
  checksum: fba9381f369e3e5e30e4e1353164243575a82f9b4b0010fc43dab33e7341d86032f9fdc6aa2d122f0737fce69a3c6544c295d9787aa4d522bc24ac1fcaac69d6
  languageName: node
  linkType: hard

\\"signal-exit@npm:^3.0.0\\":
  version: 3.0.3
  resolution: \\"signal-exit@npm:3.0.3\\"
  checksum: 56617a9c3e1bafb843f3ece5c16391ad6340f50df76957433729d8c54c1dd4f7e54f84e3fafd409f2ce2b4f6c772459597b93087e3e67e187fc29b26a0073662
  languageName: node
  linkType: hard

\\"string-width@npm:^1.0.1\\":
  version: 1.0.2
  resolution: \\"string-width@npm:1.0.2\\"
  dependencies:
    code-point-at: ^1.0.0
    is-fullwidth-code-point: ^1.0.0
    strip-ansi: ^3.0.0
  checksum: 8acab10b985f1a207f8a6b4689502ea3c9c96e2908774d662169aa8c4bd831f77bf41176fbb86d3d0df5dc997106774e37550e8da878ce6fd8445102afec88bf
  languageName: node
  linkType: hard

\\"string-width@npm:^2.0.0, string-width@npm:^2.1.1\\":
  version: 2.1.1
  resolution: \\"string-width@npm:2.1.1\\"
  dependencies:
    is-fullwidth-code-point: ^2.0.0
    strip-ansi: ^4.0.0
  checksum: 0c8d175d8414245688a2ea59bdd600760c7efdaf99571708ce9171a82d3da8bfd2056fb4cd1aca40e6d9854945270a501fedff59fcd1aabaef2eefcdfea1d9ce
  languageName: node
  linkType: hard

\\"strip-ansi@npm:^3.0.0, strip-ansi@npm:^3.0.1\\":
  version: 3.0.1
  resolution: \\"strip-ansi@npm:3.0.1\\"
  dependencies:
    ansi-regex: ^2.0.0
  checksum: 2919e07ae8a9634c111913cc20c6c619109c754108b8d8777ecc92ff999ca1adc84b32a51efd6e6a19168de38b06359d3b31fd1906d905731f3065cc2f9de5d7
  languageName: node
  linkType: hard

\\"strip-ansi@npm:^4.0.0\\":
  version: 4.0.0
  resolution: \\"strip-ansi@npm:4.0.0\\"
  dependencies:
    ansi-regex: ^3.0.0
  checksum: 65d6d40d63adccbf03deeb2919a303ea571933ce3dc463087745da3f5a7c14caa30a2776c3ea2b941c220abf7d4acd8e9922fd4335d5988508ddadbf1aa9d94a
  languageName: node
  linkType: hard

\\"strip-eof@npm:^1.0.0\\":
  version: 1.0.0
  resolution: \\"strip-eof@npm:1.0.0\\"
  checksum: 20a828d78417a6a92db24ed630967d57c1d323d4da159a79bbdf66032374367729f70ee7076094a29723d33e41a2df8617f1e2083ab85f588a9fdf1786e91b11
  languageName: node
  linkType: hard

\\"supports-color@npm:^7.1.0\\":
  version: 7.1.0
  resolution: \\"supports-color@npm:7.1.0\\"
  dependencies:
    has-flag: ^4.0.0
  checksum: 932a1d07cd46dc7c5b189e18bf9cba4484cc331a23befbfdffe908576b67d83f5e9313cca093cdc72f807b50f89edb60d8b1befd42db4718e2b7c704a289da66
  languageName: node
  linkType: hard

\\"which-module@npm:^2.0.0\\":
  version: 2.0.0
  resolution: \\"which-module@npm:2.0.0\\"
  checksum: 1f90d98b64a16da8cc614ae7373df97973ded10ae3b0ef3fe6e9a836f6a46dad77d99b6148791fd4191d45a42a7481fc952414650a896494d2d04448e568e905
  languageName: node
  linkType: hard

\\"which@npm:^1.2.9\\":
  version: 1.3.1
  resolution: \\"which@npm:1.3.1\\"
  dependencies:
    isexe: ^2.0.0
  bin:
    which: ./bin/which
  checksum: 8c639095289e694cbce93f17662e56f740ceafb8d73cdccf0d2b2968df0e8b9c8ddf16f44711d1d5a5efe4d2091cb3ca06d1afa2db359df48588a71a4b60d0c6
  languageName: node
  linkType: hard

\\"wrap-ansi@npm:^2.0.0\\":
  version: 2.1.0
  resolution: \\"wrap-ansi@npm:2.1.0\\"
  dependencies:
    string-width: ^1.0.1
    strip-ansi: ^3.0.1
  checksum: 6e02589addbf9e0797b94d5ef79810e0aeba8e42162db3986fb3eaf94360ede6637a72a8906b886863d877294097f9206acb40b95a1e21c274d7fee41d4c89df
  languageName: node
  linkType: hard

\\"wrappy@npm:1\\":
  version: 1.0.2
  resolution: \\"wrappy@npm:1.0.2\\"
  checksum: 0796da084f06bced2351fed9686a7211f4a4b774a7a3b64c7ead1b3bef162b1721f2a1d3fb1268bf2e848c9d743eca189c2a243159a1512d5dfab4b0d4dd60b5
  languageName: node
  linkType: hard

\\"ws-yarn-v2-test@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"ws-yarn-v2-test@workspace:.\\"
  dependencies:
    \\"@bluelovers/tsconfig\\": ^1.0.20
    \\"@types/node\\": \\"*\\"
    chalk: ^4.1.0
    fmake: ^0.1.3
    yarn: ^2.0.0-rc.27
  peerDependencies:
    \\"@bluelovers/conventional-changelog-bluelovers\\": \\"*\\"
    lerna: \\"*\\"
    yarn: \\"*\\"
    ynpx: \\"*\\"
  languageName: unknown
  linkType: soft

\\"y18n@npm:^3.2.1 || ^4.0.0\\":
  version: 4.0.0
  resolution: \\"y18n@npm:4.0.0\\"
  checksum: f3fcafde11e668d66a061d4cdb49243a2cac83012193666941728d6e8002e2022c22c3ac318123b2ff84d8c99ff4c0b0764e2ac6dfd8c8df3488305724387f78
  languageName: node
  linkType: hard

\\"yargs-parser@npm:^11.1.1\\":
  version: 11.1.1
  resolution: \\"yargs-parser@npm:11.1.1\\"
  dependencies:
    camelcase: ^5.0.0
    decamelize: ^1.2.0
  checksum: 38563696892c595278cb5195db9b90e9a1b8cd09920b892fdb7f8e4df77fceb977b418be673e1d44b935e424d4de4abf23d4571526645d9778749712d488e50a
  languageName: node
  linkType: hard

\\"yargs@npm:^12.0.0\\":
  version: 12.0.5
  resolution: \\"yargs@npm:12.0.5\\"
  dependencies:
    cliui: ^4.0.0
    decamelize: ^1.2.0
    find-up: ^3.0.0
    get-caller-file: ^1.0.1
    os-locale: ^3.0.0
    require-directory: ^2.1.1
    require-main-filename: ^1.0.1
    set-blocking: ^2.0.0
    string-width: ^2.0.0
    which-module: ^2.0.0
    y18n: ^3.2.1 || ^4.0.0
    yargs-parser: ^11.1.1
  checksum: 841660314364ea141198ab525460a3ba7e4de189e867205c01d8d3a53f63f994128a1be8ac37f4d1c400683278bc88e3a4bf4a3bdbec1787c32db68d11a92642
  languageName: node
  linkType: hard

\\"yarn@npm:^2.0.0-rc.27\\":
  version: 2.0.0-rc.27
  resolution: \\"yarn@npm:2.0.0-rc.27\\"
  bin:
    yarn: ./bin/yarn.js
    yarnpkg: ./bin/yarn.js
  checksum: 3ae41f3f5209bea8c6f9d205ba4313a781bfbe6e3bda1abc7761e16f4170c1496b087013d954bb08802ce9a8f7097b55040bd439ee7db62344473c29741fc040
  languageName: node
  linkType: hard
"
`;

exports[`v2 fixDuplicates yarn.lock 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4

\\"library@npm:>=1.0.0, library@npm:>=1.1.0\\":
  version: 3.0.0
  resolution: \\"library@npm:3.0.0\\"
  checksum: 2/6fc98369f954229cbb6e4ce1a27a4202a17b4ad67b8def64322e9351414eef405b8783ecbe1b8f0334e52935ae8c43cd3bcc8abd78500227d491516a9a9d96aa
  languageName: node
  linkType: hard

\\"library@npm:^2.0.0\\":
  version: 2.1.0
  resolution: \\"library@npm:2.1.0\\"
  checksum: 2/6fc98369f954229cbb6e4ce1a27a4202a17b4ad67b8def64322e9351414eef405b8783ecbe1b8f0334e52935ae8c43cd3bcc8abd78500227d491516a9a9d96aa
  languageName: node
  linkType: hard

\\"lodash@npm:>=1.0.0, lodash@npm:>=2.0.0\\":
  version: 4.17.15
  resolution: \\"lodash@npm:4.17.15\\"
  checksum: 2/4742f458f496d3d2d27710118022aaa4b047e4d6d340bd61400a4d604e98780a43670abea736c614cdb94f9132b1a52791965f2071a78d4e5ea321ccaf7df5e5
  languageName: node
  linkType: hard

\\"yarn-berry@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"yarn-berry@workspace:.\\"
  dependencies:
    library: ^2.0.0
    lodash: \\">=2.0.0\\"
  languageName: unknown
  linkType: soft
"
`;

exports[`v2 listDuplicates 456.lock 1`] = `
Array [
  "Package \\"@bluelovers/tsconfig\\" wants ^1.0.19 and could get 1.0.20, but got 1.0.19",
]
`;

exports[`v2 listDuplicates yarn.lock 1`] = `
Array [
  "Package \\"lodash\\" wants >=1.0.0 and could get 4.17.15, but got 1.3.1",
]
`;
